[project]
name = "symnet3"
version = "0.1.0"
description = "SymNet3.0: Exploiting Long-Range Influences in Learning Generalized Neural Policies for Relational MDPs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=2.0.0",
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.0",
    "joblib",
    "matplotlib",
    "mock",
    "networkx",
    "numpy",
    "pandas",
    "pygame",
    "pytest",
    "rddlrepository>=2.0",
    "rdkit",
    "requests",
    "rl_algs",
    "scikit_learn",
    "scipy",
    "setuptools",
    "six",
    "spektral",
    "tabulate",
    "tensorflow",
    "tqdm",
]